# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# This file is used by the gn meta-buildsystem find the root of the source tree
# and to set startup options.

# The location of the build configuration file.
buildconfig = "//build/config/BUILDCONFIG.gn"
