# Copyright 2016 The Fuchsia Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//magma/gnbuild/magma.gni")

shared_library("GLESv2") {
  deps = [
    "$mesa_build_root/include:GLES2",
    "compiler",
    "mapi",
    "mesa",
  ]
}

source_set("GLESv2_source") {
  deps = [
    "$mesa_build_root/include:GLES2",
    "compiler",
    "mapi",
    "mesa",
  ]
}

config("common_config") {

  defines = [
    "STDC_HEADERS=1",
    "HAVE_SYS_TYPES_H=1",
    "HAVE_SYS_STAT_H=1",
    "HAVE_STDLIB_H=1",
    "HAVE_STRING_H=1",
    "HAVE_MEMORY_H=1",
    "HAVE_STRINGS_H=1",
    "HAVE_INTTYPES_H=1",
    "HAVE_STDINT_H=1",
    "HAVE_UNISTD_H=1",
    "HAVE_DLFCN_H=1",
    "YYTEXT_POINTER=1",
    "HAVE___BUILTIN_BSWAP32=1",
    "HAVE___BUILTIN_BSWAP64=1",
    "HAVE___BUILTIN_CLZ=1",
    "HAVE___BUILTIN_CLZLL=1",
    "HAVE___BUILTIN_CTZ=1",
    "HAVE___BUILTIN_EXPECT=1",
    "HAVE___BUILTIN_FFS=1",
    "HAVE___BUILTIN_FFSLL=1",
    "HAVE___BUILTIN_POPCOUNT=1",
    "HAVE___BUILTIN_POPCOUNTLL=1",
    "HAVE___BUILTIN_UNREACHABLE=1",
    "HAVE_FUNC_ATTRIBUTE_CONST=1",
    "HAVE_FUNC_ATTRIBUTE_FLATTEN=1",
    "HAVE_FUNC_ATTRIBUTE_FORMAT=1",
    "HAVE_FUNC_ATTRIBUTE_MALLOC=1",
    "HAVE_FUNC_ATTRIBUTE_PACKED=1",
    "HAVE_FUNC_ATTRIBUTE_PURE=1",
    "HAVE_FUNC_ATTRIBUTE_UNUSED=1",
    "HAVE_FUNC_ATTRIBUTE_WARN_UNUSED_RESULT=1",
    "HAVE_DLADDR=1",
    "HAVE_CLOCK_GETTIME=1",
    "PACKAGE_NAME=\"Mesa\" ",
    "PACKAGE_TARNAME=\"mesa\" ",
    "PACKAGE_VERSION=\"11.2.1\" ",
    "PACKAGE_STRING=\"Mesa\ 11.2.1\" ",
    "PACKAGE_BUGREPORT=\"https://bugs.freedesktop.org/enter_bug.cgi\?product=Mesa\" ",
    "PACKAGE_URL=\"\" ",
    "PACKAGE=\"mesa\" ",
    "VERSION=\"11.2.1\"",
    "_DEFAULT_SOURCE",
  ]

  # TODO(MA-10) Add gn build switch for debug vs release.
  #defines += [ "DEBUG=1" ]

  cflags = [
    "-g",
    "-O2",
    "-Wall",
    "-Werror=implicit-function-declaration",
    "-fno-strict-aliasing",
    "-fno-math-errno",
    "-fno-trapping-math",
    "-fno-builtin-memcmp",
    "-fPIC",
  ]

  # TODO(MA-18) fix these warnings and remove the -Wno*
  warnings = [
    "-Wno-unused-parameter",
    "-Wno-missing-field-initializers",
    "-Wno-initializer-overrides",
    "-Wno-sign-compare",
    "-Wno-incompatible-pointer-types",
    "-Wno-deprecated-register",
    "-Wno-tautological-compare",
    "-Wno-delete-non-virtual-dtor",
    "-Wno-overloaded-virtual",
    "-Wno-absolute-value",
    "-Wno-format",
    "-Wno-unneeded-internal-declaration",
    "-Wno-missing-braces",
    "-Wno-unused-function",
    "-Wno-mismatched-tags",
    "-Wno-ignored-qualifiers",
    "-Wno-enum-conversion",
    "-Wno-unused-private-field",
  ]
  cflags += warnings
}
