# Copyright 2016 The Fuchsia Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//magma/gnbuild/magma.gni")

source_set("compiler") {
  configs += [ "$mesa_build_root/src:common_config" ]

  sources = [
    "builtin_type_macros.h",
    "glsl_types.cpp",
    "glsl_types.h",
    "nir_types.cpp",
    "nir_types.h",
    "shader_enums.c",
    "shader_enums.h",
  ]

  deps = [
    "glsl",
    "nir",
    "$mesa_build_root/src/mapi/glapi",
    "$mesa_build_root/src/mesa/main",
    "$mesa_build_root/src/util",
  ]
}
