# Copyright 2016 The Fuchsia Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//magma/gnbuild/magma.gni")

# config("drm_config") {
#   defines = [ "HAVE_LIBDRM" ]
#   cflags = [ "-I=/usr/include/libdrm" ]
#   libs = [ "drm" ]
# }

config("loader_config") {
  include_dirs = [ "$mesa_build_root/src/loader" ]
}

source_set("loader") {
  cflags = [ "-fPIC" ]

  public_configs = [
    ":loader_config",
    # ":drm_config",
    "$mesa_build_root/src:common_config",
  ]

  sources = [
    "loader.c",
    "loader.h",
    "pci_id_driver_map.c",
    "pci_id_driver_map.h",
  ]

  deps = [
    "$mesa_build_root/include:pci_ids",
  ]
}
