# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../mesa.gni")

mesa_source_set("os") {
  if (current_os == "fuchsia") {
    sources = [
      "fuchsia.cpp",
      "fuchsia.h",
    ]
    deps = [
      "//garnet/lib/magma/src/libmagma",
      "//garnet/lib/magma/src/magma_util",
    ]
  }
}
